# blackbird

./: .clang-format  CMakeLists.txt  README.md  combinators.hpp
test/: CMakeLists.txt  test.cpp
